# zad2

./: CMakeLists.txt
inc/: BazaTestu.hh  LZespolona.hh  WyrazenieZesp.hh
src/: BazaTestu.cpp  LZespolona.cpp  WyrazenieZesp.cpp  main.cpp
